# KODA-LZW

./: .gitignore  CMakeLists.txt
include/: lzw.h  types.h
include/lib/: lzw.h  types.h
src/: lzw.cpp  lzw_compress.cpp  lzw_decompress.cpp  main.cpp  test.cpp  types.cpp
src/lib/: lzw.cpp  types.cpp
src/tests/: test.cpp
